--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -36,11 +36,11 @@
                         <img src="<?= $this->basePath('img/zf-logo-mark.svg') ?>" height="28" alt="Zend Framework <?= \Application\Module::VERSION ?>"/>&nbsp;Skeleton Application
                     </a>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?= $this->url('home') ?>">Home</a></li>
-                    </ul>
-                </div>
+                <?=$this->navigation('navigation')
+                    ->menu()
+                    ->setUlClass('nav navbar-nav')
+                    ->setMaxDepth(0)
+                    ->setRenderInvisible(false)?>
             </div>
         </nav>
         <div class="container">
